--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:4000/api
+VITE_API_URL=https://mypricebackend.onrender.com/api
 VITE_GOOGLE_CLIENT_ID=450907894110-dsj9aglc8ubf7173olsath3av6ar9iu6.apps.googleusercontent.com
