--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,8 @@ MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/myprice
 PORT=4000
 GOOGLE_CLIENT_ID=your-google-oauth-client-id.apps.googleusercontent.com
 JWT_SECRET=replace-with-a-long-random-string
+# Optional: allow POST /api/auth/dev-login for local testing (never enable in prod)
+ENABLE_DEV_LOGIN=false
 # Optional for running npm run seed
 # SEED_USER_EMAIL=user@example.com
 # SEED_GOOGLE_ID=seed-google-id
