--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
 VITE_API_URL=http://localhost:4000/api
 VITE_GOOGLE_CLIENT_ID=your-google-oauth-client-id.apps.googleusercontent.com
+VITE_ENABLE_DEV_LOGIN=false
